--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "nodemailer",
   "version": "0.1.0",
+  "main": "server/index.js",
+  "proxy": "http://localhost:4000",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "nodemailer": "^4.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
